fix: name not showing when added to queue

--- a/src/rlgl/Game.css
+++ b/src/rlgl/Game.css
@@ -1,8 +1,24 @@
+@font-face {
+    font-family: 'Spotify';
+    font-weight: bold;
+    src: url("/src/assets/fonts/Spotify-Bold.otf");
+}
+
+
+h1 {
+    font: 'Spotify';
+}
+
+
+
 #root {
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
+    font: 'Spotify';
+    display: flex;
+    flex-direction: column;
 }
 
 
